--- a/RentCar/templates/RentCar/pagina_perfil.html
+++ b/RentCar/templates/RentCar/pagina_perfil.html
@@ -33,7 +33,7 @@
 
         </div>
         <div class="mb-3">
-          <label for="disabledTextInput">Apellido Paterno</label>
+          <label for="disabledTextInput">Apellido</label>
           <input type="text" name="apellido_p" id="apellido_p" class="form-control" placeholder="{{user.last_name}}" required><span
             class="barra"></span>
 
