Arreglo de vocabulario

--- a/RentCar/templates/RentCar/Plantilla_info_auto.html
+++ b/RentCar/templates/RentCar/Plantilla_info_auto.html
@@ -58,11 +58,11 @@
 
                     {% if user.is_staff %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'ordenes' %}">Ordenes</a>
+                        <a class="nav-link" href="{% url 'ordenes' %}">Órdenes</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'registarauto' %}">agregar autos</a>
+                        <a class="nav-link" href="{% url 'registarauto' %}">Agregar autos</a>
                     </li>
                     {% endif %}
                     {% if user.is_authenticated %}  
