--- a/RentCar/templates/RentCar/catalogo_planilla.html
+++ b/RentCar/templates/RentCar/catalogo_planilla.html
@@ -17,8 +17,12 @@
                   <p class="card-text">{{vehiculo.descripcion}}</p>
                   <a href={{vehiculo.patente}} class="btn " style="background-color: rgb(255, 174, 0);">Ir</a>
                   {% if user.is_staff %}
-                  <a href="{% url 'mod_auto' vehiculo.patente %}" class="btn" style="background-color: rgb(255, 174, 0); margin-left: 110px;">MODIFICAR</a>
+                  <a href="{% url 'mod_auto' vehiculo.patente %}" class="btn" style="background-color: rgb(255, 174, 0); margin-left: 110px;">Editar</a>
                   {% endif %}
+                  <a href="{% url 'eliminarAuto' vehiculo.patente %}" class="btn" style="background-color: red;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                    <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+                  </svg></a>
+             
                 </div>
               </div>
   </div>
