--- a/RentCar/templates/RentCar/pag_registro.html
+++ b/RentCar/templates/RentCar/pag_registro.html
@@ -2,13 +2,12 @@
   {% extends 'RentCar/base.html' %}
   {% block contenido %}
   {% load static %}
-
   <link rel="stylesheet" href="{% static 'RentCar/css/pagina.reg/estiloreg.css' %}">
   {% if not user.is_staff %}
   <h2 style="text-align: center; padding-bottom: 20% ; padding-top: 10%;" >No tienes los privilegios para acceder.</h2>
   {% endif %}
   {% if user.is_staff %}
-    <table class="table table-striped">
+    <table style="line-height: 3; margin-bottom: 400px;" class="table table-striped">
         <thead style="background-color:rgb(255, 174, 0) ;">
           <tr>
             <th scope="col">#</th>
@@ -38,5 +37,5 @@
       </table>
       {% endif %}
 
-      
+     
 {% endblock %}
